2009-07-14  Jackson Harper  <jackson@ximian.com>

	* HtmlWindow.cs: This returns a window not an IntPtr.

2009-06-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ScriptableObjectWrapper.cs: Fix compiler warning. Using System.
	Globalization once is enough

2009-05-26  Chris Toshok  <toshok@ximian.com>

	* HtmlWindow.cs (CurrentBookmark): use
	"GetPropertyInternal<IntPtr>" instead of "(IntPtr) GetProperty".
	fixes the initial display at http://demos.telerik.com/silverlight/

2009-05-18  Andreia Gaita  <avidigal@novell.com>

	* BrowserInformation.cs, HtmlDocument.cs, HtmlElement.cs,
	  HtmlObject.cs, ScriptObject.cs, ScriptObjectCollection.cs:
	Simplify calls, avoid passing handles explicitely, exercise
	the public API as much as possible. Move internal helpers
	from HtmlObject to ScriptObject

	* HtmlWindow.cs, ScriptableObjectWrapper.cs:
	Rewrite the type conversion to target the requested type whenever
	possible. Concentrate all the conversions in one place, kill
	duplicated code.

2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* HtmlPage.cs: Updated according to API changes.

2009-05-15  Chris Toshok  <toshok@ximian.com>

	* ScriptableObjectWrapper.cs (ValidateArguments): don't deref
	nulls.
	(InvokeFromUnmanaged): same.

2009-05-15  Andreia Gaita  <avidigal@novell.com>

	* HtmlWindow.cs: Clean up some calls

2009-04-24  Sebastien Pouliot  <sebastien@ximian.com>

	* ScriptObject.cs: handle field should not be visible.

2009-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* HtmlObject.cs:
	* ScriptableObjectWrapper.cs: Generate all P/Invoke methods.

2009-04-07  Chris Toshok  <toshok@ximian.com>

	* HtmlWindow.cs: use string.IsNullOrEmpty instead of just checking
	null then assuming string[0] is valid.

2009-04-03  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlPage.cs: Do not let the "major" properties be usable if 
	EnableHTMLAccess (from the plugin properties) is false.

2009-04-02  Aaron Bockover  <abockover@novell.com>
