@@ -106,12 +106,14 @@ namespace System.Windows.Browser
 			string str = "new function () {{ this.ci = function ({1}) {{ return new {0} ({1}); }}; }}";
 
 			string parms = "";
-			for (int i = 0; i < args.Length; i++) {
-				if (i == 0)
-					parms += "arg";
-				else
-					parms += ",args";
-				parms += i;
+			if (args != null) {
+				for (int i = 0; i < args.Length; i++) {
+					if (i == 0)
+						parms += "arg";
+					else
+						parms += ",args";
+					parms += i;
+				}
 			}
 			ScriptObject func = (ScriptObject) this.Eval (String.Format (str, typeName, parms));
 			return (ScriptObject) func.Invoke ("ci", args);
