@@ -1,3 +1,7 @@
+2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* HtmlWindow.cs: CreateInstance: add null check.
+
 2009-07-14  Jackson Harper  <jackson@ximian.com>
 
 	* HtmlWindow.cs: This returns a window not an IntPtr.
